wrapping up backend for student2 kt2